# carto_vivabilite

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: communes.py  filters.py  geojson.py  health.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py  commune.py  filters.py  geojson.py  requests.py  responses.py
backend/app/services/: __init__.py  analysis_service.py  climate_service.py  commune_service.py  data_registry.py  filter_service.py  geojson_service.py  layer_service.py  scoring_service.py
backend/tests/: __init__.py  conftest.py  test_communes.py  test_health.py
frontend/: .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: index.ts
frontend/src/components/filters/: FilterPanel.tsx  MobileFilterSheet.tsx  index.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/map/: Legend.tsx  MapContainer.tsx  ScoreCard.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Input.tsx  ScoreBadge.tsx  Slider.tsx  Toggle.tsx  index.ts
frontend/src/hooks/: index.ts  useCommunes.ts  useFilters.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: filterStore.ts  index.ts  mapStore.ts
frontend/src/types/: api.ts  commune.ts  filters.ts  index.ts
